# SimLIS

./: pyproject.toml  run_sim.py
Configs/: highway.yaml  logistics center.yaml  office.yaml  retail.yaml
Data/: Ankunft.xlsx  DB Schenker Ladeinfrastruktur.xlsx  Ladekurven_Master.csv  Ladekurven_Master.xlsx  SoC_Ankunft.xlsx  Standzeiten.xlsx  localload_pv_market.csv  localload_pv_market_highway.csv  localload_pv_market_logistics_center.csv
Data/building_loads/: logistics_center_tub_2018.csv  office_tub_2018.csv  retail_tub_2018.csv
Data/building_loads/specific_building_loads/: WZ10_Nahrungs- und Futtermittelherstellung Weighted German Average  2018.csv  WZ11_GetrÑnkeherstellung Weighted German Average  2018.csv  WZ12_Tabakverarbeitung Weighted German Average  2018.csv  WZ17_Papierherstellung Weighted German Average  2018.csv  WZ21_Pharmazeutische Erzeugnisse Weighted German Average  2018.csv  WZ22_Gummi- und Kunststoffwaren Weighted German Average  2018.csv  WZ28_Maschinenbau Weighted German Average  2018.csv  (+22 more)
Data/strategies/: latest.csv
Data/strategies/generation/: latest.csv
Model/: Simpler Code Kopie 4.py  sim_extended.py  sim_model.py  simulation.py
Notebooks/: Untitled.ipynb  run_simulation.ipynb
Notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Scenario/: highway.yaml  industrial_site.yaml  industrial_site_2_shift.yaml  logistics_center.yaml  office.yaml  retail.yaml
scenarios/: highway.yaml  industrial_site_2_shift.yaml  industrial_site_3_shift.yaml  logistics_center.yaml  office.yaml  retail.yaml
simlis.egg-info/: PKG-INFO  SOURCES.txt
(+4 files in other folders)
